--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -19,7 +19,7 @@
           <input class="form-control" type="search" placeholder="Search">
         </div>
         <div class="col">
-          <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+           <button class="btn btn-outline-dark" type="submit">Search</button>
         </div>
       </div>
     </form>
