--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -1,23 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand"  href="/">EZ Cooking</a>
+
+  <a class="navbar-brand" href="/">EZ Cooking</a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <!-- removed Home button -->
-    </ul>
+    <ol class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" id="profileName" href="/">Profile - </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Favorites</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" id="buttonLogout" href="/login">Log Out</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/">About</a>
+      </li>
+    </ol>
+
     <form class="form-inline my-2 my-lg-0">
       <div class="row">
         <div class="col">
           <input class="form-control" type="search" placeholder="Search">
         </div>
         <div class="col">
-           <button class="btn btn-outline-dark" type="submit">Search</button>
+          <button class="btn btn-outline-dark" type="submit">Search</button>
         </div>
       </div>
     </form>
+
   </div>
 </nav>
