Added facebook login, still need to do button and test

--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -8,18 +8,19 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
     <ol class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" id="profileName" href="/">Profile - </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/">Favorites</a>
+        <a class="nav-link" href="/favorites">Favorites</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" id="buttonLogout" href="/login">Log Out</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/">About</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
     </ol>
 
