--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -10,8 +10,8 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
     <ol class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" id="profileName" href="/">Profile - </a>
+      <li class="nav-item disabled ">
+        <a class="nav-link" id="profileName" >Profile - </a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/favorites">Favorites</a>
@@ -23,7 +23,7 @@
         <a class="nav-link" href="/about">About</a>
       </li>
     </ol>
-
+    <!--
     <form class="form-inline my-2 my-lg-0">
       <div class="row">
         <div class="col">
@@ -34,6 +34,7 @@
         </div>
       </div>
     </form>
+  -->
 
   </div>
 </nav>
