--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);">
 
   <a class="navbar-brand" href="/">EZ Cooking</a> 
   <img class="mr-auto" id="profileCircle" src="" alt="" style='border-radius: 50%; width : auto; max-height: 2rem;'>
