--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);">
 
   <a class="navbar-brand" href="/">EZ Cooking</a> 
-  <img class="mr-auto" id="profileCircle" src="" alt="" style='border-radius: 50%; width : auto; max-height: 2rem;'>
-      
+  <a class="mr-auto" href="/profile">
+    <img  id="profileCircle" src="" alt="" style='border-radius: 50%; width : auto; max-height: 2rem;'>
+  </a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -12,8 +13,8 @@
 
     <ol class="navbar-nav mr-auto mt-2 mt-lg-0">
 
-      <li class="nav-item disabled ">
-        <a class="nav-link" id="profileName"></a>
+      <li class="nav-item active ">
+        <a class="nav-link" href="/profile" id="profileName"></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/favorites">Favorites</a>
