--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -1,8 +1,10 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <a class="navbar-brand" href="/home">
+    <img class="navbar-logo" src="/images/logo-transparent.svg">
+  </a> 
 
-  <a class="navbar-brand" href="/">EZ Cooking</a> 
   <a class="mr-auto" href="/profile">
-    <img  id="profileCircle" src="" alt="" style='border-radius: 50%; width : auto; max-height: 2rem;'>
+    <img class="navbar-profile" id="profileCircle">
   </a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
     aria-expanded="false" aria-label="Toggle navigation">
